--- a/Task_1/requirements.txt
+++ b/Task_1/requirements.txt
@@ -1,7 +1,8 @@
 pandas 2.2.2
-scikit-learn 1.4.2
-matplotlib 3.8.4
 numpy 1.26.4
+scikit-learn 1.4.2
 seaborn 0.13.2
+matplotlib 3.8.4
 mlxtend 0.23.3
-plotly 5.22.0
+ucimlrepo 0.0.7
+
